<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
   
    <LinearLayout
    	android:layout_marginTop="4dip"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">

		<TextView
			android:text="@string/publisher_colon"
    		android:layout_marginRight="4sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:textAppearance="?android:attr/textAppearanceLarge" />
   
		<AutoCompleteTextView android:id="@+id/publisher_name"
			android:textColor="@android:color/black"
			android:completionHint="@string/publisher_hint"
			android:hint="@string/publisher_hint"
        	android:selectAllOnFocus="true"
            android:completionThreshold="1"
	        android:singleLine="true"
			
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge" />
			
	</LinearLayout>
	
   <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

		<Button android:id="@+id/button_sync_apps"
			android:text="@string/sync_apps"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge" />
   
		<Button android:id="@+id/button_sync_comments"
			android:text="@string/sync_comments"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge" />
			
	</LinearLayout>
	   
    <ListView android:id="@android:id/list"
    	android:paddingTop="5dip"
    	android:choiceMode="multipleChoice"
    	android:fastScrollEnabled="false"
        android:layout_width="fill_parent"
		android:layout_height="fill_parent"
        android:layout_weight="1"
        android:cacheColorHint="@color/transparent"
        android:transcriptMode="disabled"/>

    <TextView android:id="@android:id/empty"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
			android:text="@string/empty_apps_list"/>

</LinearLayout>