<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    >
	    
		<LinearLayout
			android:gravity="center_horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingLeft="5sp"
		    android:paddingRight="5sp"
		    android:orientation="vertical">
		
			<LinearLayout
				android:gravity="center_horizontal"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">
			
				<TextView
				    android:id="@+id/merchant_info_fetcher_note"
					android:text="@string/merchant_info_fetcher_blurb"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
	
		    	<Button
				    android:id="@+id/button_credentials_fetcher"
					android:text="@string/merchant_fetch_automatically"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				/>
			</LinearLayout>
				

			<TextView android:text="@string/merchant_id"
		        android:layout_marginTop="20dip"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/merchant_id_edit"
		        android:hint="@string/merchant_id"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:scrollHorizontally="true"
		        android:autoText="false"
		        android:capitalize="none"
		        android:gravity="fill_horizontal"
		        android:inputType="number"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
			<TextView android:text="@string/merchant_key"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/merchant_key_edit"
		        android:hint="@string/merchant_key"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:scrollHorizontally="true"
		        android:autoText="false"
		        android:capitalize="none"
		        android:gravity="fill_horizontal"
		        android:inputType="text"
		        android:nextFocusDown="@id/android:button1"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		        
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    >
		   
		   	 	<CheckBox
				    android:id="@+id/checkbox_save_password"
				    android:checked="true"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				/>
			 
			 	<TextView
					android:text="@string/merchant_save_credentials"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    />
			    
			</LinearLayout>
	
		</LinearLayout>
	</ScrollView>


	<LinearLayout
		android:gravity="center_horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
    	<Button
		    android:id="@+id/button_obtain_records"
			android:text="@string/merchant_obtain_records"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		/>
	    
	    
	</LinearLayout>
</LinearLayout>