<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

	<LinearLayout
		android:layout_marginTop="4dip"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:orientation="horizontal">
	   
		<Button android:id="@+id/button_execute_plot"
			android:text="@string/plot"
		     android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge" />
	
		<LinearLayout
	    	android:layout_width="fill_parent"
			android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:orientation="horizontal">
		
		   	<TextView
			     android:text="Range:"
			     android:gravity="center_horizontal"
			     android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="4sp"
				 android:textAppearance="?android:attr/textAppearanceMedium" />
		
		   	<TextView android:id="@+id/date_range_textview"
			     android:textColor="@color/lemon_custard"
			     android:text="Dates"  
			     android:gravity="center_horizontal"
				android:layout_width="wrap_content"
			     android:layout_height="wrap_content"
				 android:textAppearance="?android:attr/textAppearanceMedium" />
		</LinearLayout>	
	</LinearLayout>

   	<TextView
	     android:text="@string/consolidation_editor_title"  
	     android:layout_width="fill_parent"  
	     android:layout_height="wrap_content"  
	     android:paddingTop="2dip"  
	     android:paddingLeft="5dip"  
	     style="?android:attr/listSeparatorTextViewStyle" />

   	<TextView android:id="@+id/revenue_summary_textview"
	     android:text="Summary"  
	     android:layout_width="fill_parent"  
	     android:layout_height="wrap_content"  
	     android:paddingBottom="2dip"  
	     android:paddingLeft="5dip"
	     android:paddingRight="5dip"
	     android:textColor="@android:color/white"
	     android:background="@color/gray_summary_background" />

    <ExpandableListView android:id="@android:id/list"
    	android:paddingTop="5dip"
    	android:choiceMode="multipleChoice"
    	android:fastScrollEnabled="false"
        android:layout_width="fill_parent"
		android:layout_height="fill_parent"
        android:layout_weight="1"
        android:cacheColorHint="@color/transparent"
        android:transcriptMode="disabled"/>


	<LinearLayout android:id="@android:id/empty"
		android:layout_weight="1"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	    android:gravity="center"
	    android:orientation="horizontal">
	
	    <ProgressBar
			android:id="@+id/empty_list_progress"
			android:indeterminate="true"
			android:indeterminateOnly="true"
			android:gravity="center"
			android:paddingRight="5dip"	    	       
			style="?android:attr/progressBarStyleSmall"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
	    />
			 
	    <TextView android:id="@+id/empty_text_consolidation"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/empty_apps_list"/>
	
	</LinearLayout>	

			
	<LinearLayout
		android:layout_marginTop="4dip"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:orientation="horizontal">
	
		<Button android:id="@+id/button_sync_paid_apps"
			android:layout_weight="1"
			android:text="@string/sync_paid_apps"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	    
		<Button android:id="@+id/button_update_ratings"
			android:layout_weight="1"
			android:text="@string/sync_comments"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium" />
			
	</LinearLayout>
	
</LinearLayout>